--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-        <a href="https://www.instagram.com/niko_niko_ki_">インスタ</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#" class="login">yaa
+    
+        </a>
       </div>
     </div>
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>Always Smile.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <h1>Always Smile.<br>Smile TO BE kind.</h1>
+      <p>こんにちは中村です。<br>世界中に笑顔と情熱を与えていきます。</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
         <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
+        <a href="https://www.instagram.com/niko_niko_ki_" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
         <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
       </div>
     </div>
